fix tests: utf-8 reading and robust MVC exception assertions
- NavigationResponsiveTest: read templates via Files.readString() (UTF-8 by
  default) instead of new String(readAllBytes()) which used the platform
  charset (Cp1252 on Windows) and broke Cyrillic label checks
- PositionControllerMvcTest: replace brittle assertions on the MockMvc
  exception wrapper text ('Request processing failed: ...') with
  assertThatThrownBy().cause() checks; remove dead repository stubs in
  validation-error tests; rename shouldListPositionsWithPagination ->
  shouldListPositions (no pagination involved); use static imports